<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/txt_mine_update_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/bg_white"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_old_password"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:hint="@string/hint_input_old_password"
            android:textSize="16sp"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/txt_mine_feedback"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/bg_white"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_new_password"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:hint="@string/hint_input_new_password"
            android:textSize="16sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txt_mine_about_us"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/bg_white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_repeat_password"
            android:textColor="@color/text_black"
            android:textSize="16sp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:hint="@string/hint_input_repeat_password"
            android:textSize="16sp"/>

    </RelativeLayout>

    <Button
    android:id="@+id/btn_mine_confirm_changes"
    style="@style/Base.Widget.AppCompat.Button.Borderless"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginTop="8dp"
    android:background="@color/bg_white"
    android:text="@string/btn_confirm_changes"
    android:textColor="@color/text_warning"
    android:textSize="18sp" />


</LinearLayout>
