<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:gravity="center_horizontal">


    <ImageView
        android:id="@+id/img_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/bg_about_us"
        />


    <TextView
        android:id="@+id/txt_slogan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_about_us"
        android:textSize="14sp"
        android:text="@string/txt_slogan"
        android:gravity="center_horizontal"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_slogan"
        android:textSize="18sp"
        android:text="@string/txt_computer_communication"
        android:gravity="center_horizontal"
        android:layout_marginTop="21dp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:text="@string/txt_version_number" />


</RelativeLayout>
