<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_update_title"
            style="@style/title_txt"
            android:text="@string/title_update_information" />

        <RelativeLayout
            android:id="@+id/rl_nick_name"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_below="@id/txt_update_title"
            android:background="@color/bg_white">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mine_update_avatar"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignBottom="@+id/mine_information"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"
                android:src="@color/bg_gray" />


            <LinearLayout
                android:id="@+id/liner_nick_name"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/mine_update_avatar">

                <EditText
                    android:id="@+id/edit_nick_name"
                    android:layout_width="207dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_student_name"
                    android:textSize="20sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mine_input" />
            </LinearLayout>

            <View
                android:layout_width="222dp"
                android:layout_height="1dp"
                android:layout_alignBottom="@id/liner_nick_name"
                android:layout_alignLeft="@id/liner_nick_name"
                android:background="@color/bg_black" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_true_name"
            android:layout_width="match_parent"
            android:layout_height="106dp"
            android:layout_below="@id/rl_nick_name"
            android:layout_marginTop="10dp"
            android:background="@color/bg_white"
            android:orientation="vertical">


            <TextView
                android:id="@+id/student_name"
                style="@style/mine_txt_update_information"
                android:layout_marginTop="9dp"
                android:text="@string/txt_student_name" />

            <ImageView
                android:id="@+id/img_mine_name_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/student_name"
                android:src="@drawable/img_mine_eye_selector" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/hint_input_name"
                android:textSize="16sp"
                android:layout_above="@+id/student_sex"
                android:layout_alignRight="@+id/cb_edit_girl"
                android:layout_alignEnd="@+id/cb_edit_girl" />


            <TextView
                android:id="@+id/student_sex"
                style="@style/mine_txt_update_information"
                android:layout_below="@id/student_name"
                android:layout_marginTop="15dp"
                android:text="@string/txt_sex" />


            <CheckBox
                android:id="@+id/cb_edit_girl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/student_sex"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:text="女"
                android:textSize="16sp" />


            <CheckBox
                android:id="@+id/cb_edit_boy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/student_sex"
                android:layout_alignParentRight="true"
                android:layout_marginRight="76dp"
                android:text="男"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/student_phone"
                style="@style/mine_txt_update_information"
                android:layout_below="@id/student_sex"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/txt_phone_number" />


            <ImageView
                android:id="@+id/img_mine_phone_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/student_phone"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@id/student_phone"
                android:src="@drawable/img_mine_eye_selector" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/student_phone"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:hint="@string/hint_input_phone_number"
                android:textSize="16sp" />


        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_imfornation"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/rl_true_name"
            android:layout_marginTop="10dp"
            android:background="@color/bg_white">

            <TextView
                android:id="@+id/mine_update_profession"
                style="@style/mine_txt_update_information"
                android:layout_marginTop="9dp"
                android:text="@string/txt_profession" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/mine_update_profession"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:hint="@string/hint_input_profession"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/mine_update_grade"
                style="@style/mine_txt_update_information"
                android:layout_below="@id/mine_update_profession"
                android:layout_marginTop="15dp"
                android:text="@string/txt_grade" />


            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/mine_update_grade"
                android:layout_marginRight="16dp"
                android:background="@drawable/contest_spinner"
                android:textSize="16sp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"></Spinner>

            </LinearLayout>

            <TextView
                android:id="@+id/mine_update_stu_id"
                style="@style/mine_txt_update_information"
                android:layout_below="@id/mine_update_grade"
                android:layout_marginTop="15dp"
                android:text="@string/txt_student_id" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/mine_update_stu_id"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:hint="@string/hint_input_id"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/mine_update_field"
                style="@style/mine_txt_update_information"
                android:layout_below="@id/mine_update_stu_id"
                android:layout_marginTop="15dp"
                android:text="@string/txt_good_at_field" />

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/mine_update_field"
                android:layout_marginRight="16dp"
                android:background="@drawable/contest_spinner"
                android:textSize="16sp">

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </Spinner>

            </LinearLayout>


        </RelativeLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_imfornation"
            android:layout_marginTop="10dp"
            android:background="@color/bg_white">

            <TextView
                android:id="@+id/mine_txt_honor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/txt_honor_wall"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/img_mine_update_honor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:layout_marginTop="17dp"
                android:src="@drawable/ic_mine_honor" />

            <View
                android:layout_width="230dp"
                android:layout_height="1dp"
                android:layout_alignLeft="@id/mine_txt_honor"
                android:layout_below="@id/mine_txt_honor"
                android:background="@color/bg_black" />

            <GridLayout
                android:id="@+id/mine_grid_honor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/mine_txt_honor"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="3">


                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

                <TextView style="@style/view_mine_honor" />

            </GridLayout>

        </RelativeLayout>


    </RelativeLayout>

</ScrollView>