<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="108dp"
        android:layout_marginTop="16dp"
        android:background="@color/bg_white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/img_add_honor"
            android:src="@drawable/bg_add_honor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
             />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:background="@color/bg_white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_event_name"
            android:textColor="@color/text_black"
            android:textSize="16sp" />


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:hint="@string/test_sample"
            android:textSize="16sp" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/txt_mine_about_us"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="1dp"
        android:background="@color/bg_white"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_get_time"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/contest_spinner">

            <Spinner
                android:id="@+id/spinner_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"></Spinner>

        </LinearLayout>


    </RelativeLayout>


    <Button
        android:id="@+id/btn_honor_confirm_edit"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/bg_white"
        android:text="@string/btn_confirm_editing"
        android:textColor="@color/text_warning"
        android:textSize="18sp" />


</LinearLayout>
